--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@ ul.task-list li input[type="checkbox"] {
   <div class="about-contents page-columns page-full"><main class="content page-columns page-full" id="quarto-document-content">
 <section id="bio" class="level2 column-page">
 <h2 data-anchor-id="bio">Bio</h2>
-<p>¡Hola! Soy ingeniero industrial apasionado por la tecnología, el análisis de datos y la resolución de problemas complejos. Me gusta la optimización de procesos y hacer que las ideas cobren vida a través de soluciones prácticas. Tengo experiencia en herramientas digitales, optimización y desarrollo, disfruto explorar nuevos retos y compartir conocimientos. Cuando no estoy frente al pc, puedes encontrarme disfrutando de la naturaleza o aprendiendo algo nuevo.</p>
-<p>También soy estudiante de la Maestría en Investigación Operativa y Estadística de la Universidad Tecnológica de Pereira, mis líneas de actuación son analítica, educación en ingeniería y mercados eléctricos 👨‍💻 🚀</p>
+<p>¡Hola! Soy ingeniero industrial apasionado por la tecnología, el análisis de datos y la resolución de problemas complejos. Me gusta la optimización de procesos y hacer que las ideas cobren vida a través de soluciones prácticas. Tengo experiencia en herramientas digitales, optimización y desarrollo, disfruto explorar nuevos retos y compartir conocimientos.</p>
+<p>También soy estudiante de la Maestría en Investigación Operativa y Estadística de la Universidad Tecnológica de Pereira, mis líneas de interés son analítica, educación en ingeniería, y mercados eléctricos 👨‍💻 🚀</p>
 <p>
 </p>
 
