--- a/clases.html
+++ b/clases.html
@@ -150,6 +150,18 @@ ul.task-list li input[type="checkbox"] {
 </div>
   </div>
   <div class="about-contents page-columns page-full"><main class="content page-columns page-full" id="quarto-document-content">
+  
+<section id="admonempresas" class="level2 column-page">
+<h2 data-anchor-id="produccioni">Administración de Empresas</h2>
+<b>GB443 - Creación de Empresas y Plan de Negocios 🕯️💸</b>
+<p>
+</p>
+<b><i>Diapositivas: </i></b> <a href="https://sebastian-blandon.github.io/creacionempresas">sebastian-blandon.github.io/creacionempresas</a> <br>
+<p>
+</p>
+<p>
+</p>
+
 <section id="ingindustrial" class="level2 column-page">
 <h2 data-anchor-id="produccioni">Ingeniería Industrial</h2>
 
@@ -171,17 +183,24 @@ ul.task-list li input[type="checkbox"] {
 <p>
 </p>
 
+<b>II4D3 - Estadística I 📈🔍📊</b>
+<p>
+</p>
+<b><i>Diapositivas: </i></b> <a href="https://sebastian-blandon.github.io/estadisticageneral">sebastian-blandon.github.io/estadistica1</a> <br>
+<p>
+</p>
+<p>
+</p>
 
-<section id="admonempresas" class="level2 column-page">
-<h2 data-anchor-id="produccioni">Administración de Empresas</h2>
-<b>GB443 - Creación de Empresas y Plan de Negocios 🕯️💸</b>
+<b>II8B3 - Investigación de Operaciones II ⚡🏗🔝</b>
 <p>
 </p>
-<b><i>Diapositivas: </i></b> <a href="https://sebastian-blandon.github.io/creacionempresas">sebastian-blandon.github.io/creacionempresas</a> <br>
+<b><i>Diapositivas: </i></b> <a href="https://sebastian-blandon.github.io/estadisticageneral">sebastian-blandon.github.io/io2</a> <br>
 <p>
 </p>
 <p>
 </p>
+
 
 
 
