--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ ul.task-list li input[type="checkbox"] {
   <a href="mailto:s.blandon@utp.edu.co" class="about-link" rel="" target="">
      <span class="about-link-text">Email</span>
   </a>
-  <a href="/cv.pdf" class="about-link" rel="" target="">
+  <a href="/CV.pdf" class="about-link" rel="" target="">
      <span class="about-link-text">CV</span>
   </a>
 </div>
