--- a/clases.html
+++ b/clases.html
@@ -144,7 +144,7 @@ ul.task-list li input[type="checkbox"] {
   <a href="mailto:s.blandon@utp.edu.co" class="about-link" rel="" target="">
      <span class="about-link-text">Email</span>
   </a>
-  <a href="/cv.pdf" class="about-link" rel="" target="">
+  <a href="/CV.pdf" class="about-link" rel="" target="">
      <span class="about-link-text">CV</span>
   </a>
 </div>
@@ -153,10 +153,10 @@ ul.task-list li input[type="checkbox"] {
   
 <section id="admonempresas" class="level2 column-page">
 <h2 data-anchor-id="produccioni">Administración de Empresas</h2>
-<b>* GB443 - Creación de Empresas y Plan de Negocios 🕯️💸</b>
+<b>GB443 - Creación de Empresas y Plan de Negocios 🕯️💸</b>
 <p>
 </p>
-<b><i>Diapositivas: </i></b> <a href="https://sebastian-blandon.github.io/creacionempresas">sebastian-blandon.github.io/creacionempresas</a> <br>
+<i>Diapositivas:  </i> <a href="https://sebastian-blandon.github.io/creacionempresas">sebastian-blandon.github.io/creacionempresas</a> <br>
 <p>
 </p>
 <p>
@@ -165,37 +165,37 @@ ul.task-list li input[type="checkbox"] {
 <section id="ingindustrial" class="level2 column-page">
 <h2 data-anchor-id="produccioni">Ingeniería Industrial</h2>
 
-<b>* II8A3 - Producción I ⚠️⚙️</b>
+<b>II8A3 - Producción I ⚠️⚙️</b>
 <p>
 </p>
-<b><i>Diapositivas: </i></b> <a href="https://sebastian-blandon.github.io/prod1">sebastian-blandon.github.io/prod1</a> <br>
-<p>
-</p>
-<p>
-</p>
-
-<b>* II593 - Estadística General 📈🔍📊</b>
-<p>
-</p>
-<b><i>Diapositivas: </i></b> <a href="https://sebastian-blandon.github.io/estadisticageneral">sebastian-blandon.github.io/estadisticageneral</a> <br>
+<i>Diapositivas:  </i> <a href="https://sebastian-blandon.github.io/prod1">sebastian-blandon.github.io/prod1</a> <br>
 <p>
 </p>
 <p>
 </p>
 
-<b>* II4D3 - Estadística I 📈🔍📊</b>
+<b>II593 - Estadística General 📈🔍📊</b>
 <p>
 </p>
-<b><i>Diapositivas: </i></b> <a href="https://sebastian-blandon.github.io/estadisticageneral">sebastian-blandon.github.io/estadistica1</a> <br>
+<i>Diapositivas:  </i> <a href="https://sebastian-blandon.github.io/estadisticageneral">sebastian-blandon.github.io/estadisticageneral</a> <br>
 <p>
 </p>
 <p>
 </p>
 
-<b>* II8B3 - Investigación de Operaciones II ⚡🏗🔝</b>
+<b>II4D3 - Estadística I 📈🔍📊</b>
 <p>
 </p>
-<b><i>Diapositivas: </i></b> <a href="https://sebastian-blandon.github.io/estadisticageneral">sebastian-blandon.github.io/io2</a> <br>
+<i>Diapositivas:  </i> <a href="https://sebastian-blandon.github.io/estadisticageneral">sebastian-blandon.github.io/estadistica1</a> <br>
+<p>
+</p>
+<p>
+</p>
+
+<b>II8B3 - Investigación de Operaciones II ⚡🏗🔝</b>
+<p>
+</p>
+<i>Diapositivas:  </i> <a href="https://sebastian-blandon.github.io/estadisticageneral">sebastian-blandon.github.io/io2</a> <br>
 <p>
 </p>
 <p>
