--- a/clases.html
+++ b/clases.html
@@ -186,7 +186,7 @@ ul.task-list li input[type="checkbox"] {
 <b>II4D3 - Estadística I 📈🔍📊</b>
 <p>
 </p>
-<i>Diapositivas:  </i> <a href="https://sebastian-blandon.github.io/estadisticageneral">sebastian-blandon.github.io/estadistica1</a> <br>
+<i>Diapositivas:  </i> <a href="https://sebastian-blandon.github.io/estadistica1">sebastian-blandon.github.io/estadistica1</a> <br>
 <p>
 </p>
 <p>
@@ -195,7 +195,7 @@ ul.task-list li input[type="checkbox"] {
 <b>II8B3 - Investigación de Operaciones II ⚡🏗🔝</b>
 <p>
 </p>
-<i>Diapositivas:  </i> <a href="https://sebastian-blandon.github.io/estadisticageneral">sebastian-blandon.github.io/io2</a> <br>
+<i>Diapositivas:  </i> <a href="https://sebastian-blandon.github.io/io2">sebastian-blandon.github.io/io2</a> <br>
 <p>
 </p>
 <p>
